Don't forget to upgrade Gazelle
We've bumped the version in MODULE.bazel, but haven't updated the
git_repository() that goes along with it.

--- a/cmd/bb_replicator/BUILD.bazel
+++ b/cmd/bb_replicator/BUILD.bazel
@@ -15,7 +15,7 @@ go_library(
         "//pkg/proto/configuration/bb_replicator",
         "//pkg/proto/replicator",
         "//pkg/util",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
