--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -40,7 +40,7 @@ go_library(
         "@io_opentelemetry_go_otel_sdk//resource",
         "@io_opentelemetry_go_otel_sdk//trace",
         "@io_opentelemetry_go_otel_trace//:trace",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//resolver",
         "@org_golang_google_grpc//status",
