--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -68,6 +68,7 @@ use_repo(
     "org_golang_google_genproto_googleapis_bytestream",
     "org_golang_google_genproto_googleapis_rpc",
     "org_golang_google_grpc",
+    "org_golang_google_grpc_security_advancedtls",
     "org_golang_google_protobuf",
     "org_golang_x_lint",
     "org_golang_x_oauth2",
