Remove gofumpt's -lang flag
It turns out we no longer need this. This flag is also causing some
issues with the latest version of gofumpt.

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -25,7 +25,7 @@
             },
             {
                "name": "Gofmt",
-               "run": "bazel run @cc_mvdan_gofumpt//:gofumpt -- -lang 1.19 -w -extra $(pwd)"
+               "run": "bazel run @cc_mvdan_gofumpt//:gofumpt -- -w -extra $(pwd)"
             },
             {
                "name": "Clang format",
