--- a/pkg/filesystem/path/BUILD.bazel
+++ b/pkg/filesystem/path/BUILD.bazel
@@ -8,8 +8,9 @@ go_library(
         "component.go",
         "component_walker.go",
         "components_list.go",
-        "local_unix.go",
-        "local_windows.go",
+        "format.go",
+        "local_format_unix.go",
+        "local_format_windows.go",
         "loop_detecting_scope_walker.go",
         "parser.go",
         "relative_scope_walker.go",
@@ -17,11 +18,11 @@ go_library(
         "scope_walker.go",
         "stringer.go",
         "trace.go",
-        "unix_parser.go",
+        "unix_format.go",
         "virtual_root_scope_walker_factory.go",
         "void_component_walker.go",
         "void_scope_walker.go",
-        "windows_parser.go",
+        "windows_format.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/filesystem/path",
     visibility = ["//visibility:public"],
