--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -311,7 +311,7 @@ gomock(
         "Execution_ExecuteServer",
         "Execution_WaitExecutionServer",
     ],
-    library = "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
+    library = "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
     mockgen_model_library = "@org_uber_go_mock//mockgen/model",
     mockgen_tool = "@org_uber_go_mock//mockgen",
     package = "mock",
@@ -400,8 +400,8 @@ go_library(
         "//pkg/proto/blobstore/local",
         "//pkg/proto/configuration/grpc",
         "//pkg/util",
+        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_google_uuid//:uuid",
         "@com_github_prometheus_client_model//go",
         "@com_google_cloud_go_longrunning//autogen/longrunningpb",
