--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -45,8 +45,8 @@ go_library(
         "//pkg/proto/configuration/digest",
         "//pkg/random",
         "//pkg/util",
+        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_fxtlabs_primes//:primes",
         "@com_github_google_uuid//:uuid",
         "@com_google_cloud_go_storage//:storage",
