--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -18,7 +18,7 @@ go_library(
         "//pkg/grpc",
         "//pkg/proto/configuration/builder",
         "//pkg/util",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
+        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_google_cloud_go_longrunning//autogen/longrunningpb",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
@@ -39,8 +39,8 @@ go_test(
         "//internal/mock",
         "//pkg/digest",
         "//pkg/testutil",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
-        "@com_github_bazelbuild_remote_apis//build/bazel/semver",
+        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
+        "@bazel_remote_apis//build/bazel/semver:semver_go_proto",
         "@com_github_stretchr_testify//require",
         "@com_google_cloud_go_longrunning//autogen/longrunningpb",
         "@org_golang_google_grpc//:grpc",
