--- a/pkg/capabilities/BUILD.bazel
+++ b/pkg/capabilities/BUILD.bazel
@@ -16,8 +16,8 @@ go_library(
         "//pkg/auth",
         "//pkg/digest",
         "//pkg/util",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
-        "@com_github_bazelbuild_remote_apis//build/bazel/semver",
+        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
+        "@bazel_remote_apis//build/bazel/semver:semver_go_proto",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//proto",
@@ -38,8 +38,8 @@ go_test(
         "//internal/mock",
         "//pkg/digest",
         "//pkg/testutil",
-        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
-        "@com_github_bazelbuild_remote_apis//build/bazel/semver",
+        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
+        "@bazel_remote_apis//build/bazel/semver:semver_go_proto",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
