--- a/pkg/proto/icas/BUILD.bazel
+++ b/pkg/proto/icas/BUILD.bazel
@@ -6,7 +6,7 @@ proto_library(
     name = "icas_proto",
     srcs = ["icas.proto"],
     visibility = ["//visibility:public"],
-    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto"],
+    deps = ["@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto"],
 )
 
 go_proto_library(
@@ -18,7 +18,7 @@ go_proto_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/icas",
     proto = ":icas_proto",
     visibility = ["//visibility:public"],
-    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution"],
+    deps = ["@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto"],
 )
 
 go_library(
