--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,35 +1,33 @@
 module(name = "com_github_buildbarn_bb_storage")
 
-bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
-bazel_dep(name = "aspect_rules_js", version = "2.0.1")
-bazel_dep(name = "bazel_remote_apis", version = "0.0.0")
-bazel_dep(name = "gazelle", version = "0.38.0")
-bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")
+bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
+bazel_dep(name = "aspect_rules_js", version = "2.1.0")
+bazel_dep(name = "bazel_remote_apis", version = "0")
+bazel_dep(name = "gazelle", version = "0.40.0")
+bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
 bazel_dep(name = "jsonnet_go", version = "0.20.0")
 bazel_dep(name = "opentelemetry-proto", version = "1.3.2")
-bazel_dep(name = "protobuf", version = "27.3")
-bazel_dep(name = "rules_go", version = "0.50.0")
+bazel_dep(name = "protobuf", version = "28.3")
+bazel_dep(name = "rules_go", version = "0.50.1")
 bazel_dep(name = "rules_jsonnet", version = "0.6.0")
-bazel_dep(name = "rules_oci", version = "1.8.0")
+bazel_dep(name = "rules_oci", version = "2.0.1")
 bazel_dep(name = "rules_pkg", version = "1.0.1")
-bazel_dep(name = "rules_proto", version = "6.0.2")
-bazel_dep(name = "toolchains_llvm", version = "1.1.2")
+bazel_dep(name = "rules_proto", version = "7.0.2")
+bazel_dep(name = "toolchains_llvm", version = "1.2.0")
 
 git_override(
     module_name = "bazel_remote_apis",
-    commit = "de1d77b12feb81f96909f0410991c3c966d9d8e7",
+    commit = "253013303c9e1d52ebdeb5a3f0f869919e882f20",
     remote = "https://github.com/bazelbuild/remote-apis.git",
 )
 
-git_override(
+single_version_override(
     module_name = "gazelle",
-    commit = "4d0129d7adae33e8e648d3624aff8fa8f93f375b",
     patches = ["//:patches/gazelle/dont-flatten-srcs.diff"],
-    remote = "https://github.com/bazelbuild/bazel-gazelle.git",
 )
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
-go_sdk.download(version = "1.23.0")
+go_sdk.download(version = "1.23.3")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
@@ -81,6 +79,10 @@ use_repo(
 )
 
 go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
+go_deps_dev.gazelle_override(
+    build_file_generation = "on",
+    path = "github.com/cncf/xds/go",
+)
 go_deps_dev.module_override(
     patches = ["//:patches/com_github_grpc_ecosystem_go_grpc_prometheus/client-metrics-prevent-handled-twice.diff"],
     path = "github.com/grpc-ecosystem/go-grpc-prometheus",
@@ -136,4 +138,9 @@ oci.pull(
         "linux/arm64/v8",
     ],
 )
-use_repo(oci, "distroless_static")
+use_repo(
+    oci,
+    "distroless_static",
+    "distroless_static_linux_amd64",
+    "distroless_static_linux_arm64_v8",
+)
