--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -27,6 +27,7 @@ go_library(
         "peer_transport_credentials_linux.go",
         "proto_trace_attributes_extractor.go",
         "proxy_dialer.go",
+        "request_headers_authenticator.go",
         "request_metadata_tracing_interceptor.go",
         "server.go",
         "tls_client_certificate_authenticator.go",
@@ -36,6 +37,7 @@ go_library(
     deps = [
         "//pkg/auth",
         "//pkg/clock",
+        "//pkg/eviction",
         "//pkg/jwt",
         "//pkg/program",
         "//pkg/proto/auth",
@@ -100,6 +102,7 @@ go_test(
         "metadata_forwarding_and_reusing_interceptor_test.go",
         "peer_credentials_authenticator_test.go",
         "proto_trace_attributes_extractor_test.go",
+        "request_headers_authenticator_test.go",
         "request_metadata_tracing_interceptor_test.go",
         "tls_client_certificate_authenticator_test.go",
     ] + select({
