--- a/pkg/blobstore/replication/BUILD.bazel
+++ b/pkg/blobstore/replication/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "concurrency_limiting_blob_replicator.go",
         "deduplicating_blob_replicator.go",
         "local_blob_replicator.go",
+        "metrics_blob_replicator.go",
         "nested_blob_replicator.go",
         "noop_blob_replicator.go",
         "queued_blob_replicator.go",
@@ -20,10 +21,12 @@ go_library(
         "//pkg/blobstore",
         "//pkg/blobstore/buffer",
         "//pkg/blobstore/slicing",
+        "//pkg/clock",
         "//pkg/digest",
         "//pkg/proto/replicator",
         "//pkg/util",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
+        "@com_github_prometheus_client_golang//prometheus",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
