--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -100,6 +100,10 @@ go_deps_dev.module_override(
     path = "golang.org/x/oauth2",
 )
 go_deps_dev.module_override(
+    patches = ["//:patches/org_golang_x_sys/o-search.diff"],
+    path = "golang.org/x/sys",
+)
+go_deps_dev.module_override(
     patches = ["//:patches/org_uber_go_mock/mocks-for-funcs.diff"],
     path = "go.uber.org/mock",
 )
