--- a/pkg/blobstore/replication/BUILD.bazel
+++ b/pkg/blobstore/replication/BUILD.bazel
@@ -41,6 +41,7 @@ go_test(
     srcs = [
         "deduplicating_blob_replicator_test.go",
         "local_blob_replicator_test.go",
+        "metrics_blob_replicator_test.go",
         "nested_blob_replicator_test.go",
         "queued_blob_replicator_test.go",
     ],
@@ -48,6 +49,7 @@ go_test(
         ":replication",
         "//internal/mock",
         "//pkg/blobstore/buffer",
+        "//pkg/clock",
         "//pkg/digest",
         "//pkg/eviction",
         "//pkg/testutil",
