--- a/pkg/blobstore/replication/BUILD.bazel
+++ b/pkg/blobstore/replication/BUILD.bazel
@@ -45,11 +45,10 @@ go_test(
         "nested_blob_replicator_test.go",
         "queued_blob_replicator_test.go",
     ],
+    embed = [":replication"],
     deps = [
-        ":replication",
         "//internal/mock",
         "//pkg/blobstore/buffer",
-        "//pkg/clock",
         "//pkg/digest",
         "//pkg/eviction",
         "//pkg/testutil",
