Change default_service_config to google.protobuf.Struct
The gRPC service config is based on a Protobuf message structure defined
here:

https://github.com/grpc/grpc-proto/blob/master/grpc/service_config/service_config.proto

Ideally we'd just embed grpc.service_config.ServiceConfig into this
message, but that's easier said than done. There is no canonical Go
module containing the generated Protobuf source files.

Furthermore, grpc-go ships with some copies of those, but has them
placed inside internal/. This means that even if we were to generate
those ourselves, we'd run into a Protobuf registration conflict at
runtime.

Use google.protobuf.Struct, so that we can at least embed these service
configs without requiring excessive quoting.

This is a continuation of #236.

--- a/pkg/proto/configuration/grpc/BUILD.bazel
+++ b/pkg/proto/configuration/grpc/BUILD.bazel
@@ -12,6 +12,7 @@ proto_library(
         "//pkg/proto/configuration/tls:tls_proto",
         "@protobuf//:duration_proto",
         "@protobuf//:empty_proto",
+        "@protobuf//:struct_proto",
     ],
 )
 
