--- a/pkg/proto/configuration/grpc/BUILD.bazel
+++ b/pkg/proto/configuration/grpc/BUILD.bazel
@@ -8,6 +8,7 @@ proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/auth:auth_proto",
+        "//pkg/proto/configuration/eviction:eviction_proto",
         "//pkg/proto/configuration/jwt:jwt_proto",
         "//pkg/proto/configuration/tls:tls_proto",
         "@protobuf//:duration_proto",
@@ -23,6 +24,7 @@ go_proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/auth",
+        "//pkg/proto/configuration/eviction",
         "//pkg/proto/configuration/jwt",
         "//pkg/proto/configuration/tls",
     ],
