Switch sharding struct from array to map
Improves the ability to perform resharding by switching the sharding
struct from array to map. Each map entry has a key which is used in
rendezvous hashing to deterministically select which shard to use from
the collection of keys. When a shard is removed it is guaranteed that
only blobs which belonged to the removed shard will resolve to a new
shard.

In combination with ReadFallbackConfigurations this allows adding and
removing shards with minimal need to rebalance the blobs between the
shards.

For more details and migration instructions, see:
https://github.com/buildbarn/bb-adrs/blob/bf2066633e1712a3ef7c295d37cd52e65867391d/0011-rendezvous-hashing.md

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -86,8 +86,18 @@ gomock(
 gomock(
     name = "blobstore_sharding",
     out = "blobstore_sharding.go",
-    interfaces = ["ShardPermuter"],
+    interfaces = ["ShardSelector"],
     library = "//pkg/blobstore/sharding",
+    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
+    mockgen_tool = "@org_uber_go_mock//mockgen",
+    package = "mock",
+)
+
+gomock(
+    name = "blobstore_legacy_sharding",
+    out = "blobstore_legacy_sharding.go",
+    interfaces = ["ShardPermuter"],
+    library = "//pkg/blobstore/sharding/legacy",
     mockgen_model_library = "@org_uber_go_mock//mockgen/model",
     mockgen_tool = "@org_uber_go_mock//mockgen",
     package = "mock",
@@ -357,6 +367,7 @@ go_library(
         "aliases.go",
         "auth.go",
         "blobstore.go",
+        "blobstore_legacy_sharding.go",
         "blobstore_local.go",
         "blobstore_replication.go",
         "blobstore_sharding.go",
@@ -391,6 +402,7 @@ go_library(
         "//pkg/blobstore/buffer",
         "//pkg/blobstore/local",
         "//pkg/blobstore/sharding",
+        "//pkg/blobstore/sharding/legacy",
         "//pkg/blobstore/slicing",
         "//pkg/builder",
         "//pkg/clock",
