--- a/pkg/blobstore/sharding/legacy/BUILD.bazel
+++ b/pkg/blobstore/sharding/legacy/BUILD.bazel
@@ -1,13 +1,13 @@
 load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
-    name = "sharding",
+    name = "legacy",
     srcs = [
-        "rendezvous_shard_selector.go",
-        "shard_selector.go",
+        "shard_permuter.go",
         "sharding_blob_access.go",
+        "weighted_shard_permuter.go",
     ],
-    importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/sharding",
+    importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/sharding/legacy",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/blobstore",
@@ -16,19 +16,21 @@ go_library(
         "//pkg/digest",
         "//pkg/util",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
+        "@com_github_lazybeaver_xorshift//:xorshift",
         "@org_golang_x_sync//errgroup",
     ],
 )
 
 go_test(
-    name = "sharding_test",
+    name = "legacy_test",
     srcs = [
-        "rendezvous_shard_selector_test.go",
         "sharding_blob_access_test.go",
+        "weighted_shard_permuter_test.go",
     ],
     deps = [
-        ":sharding",
+        ":legacy",
         "//internal/mock",
+        "//pkg/blobstore",
         "//pkg/blobstore/buffer",
         "//pkg/digest",
         "//pkg/testutil",
