--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,23 +1,23 @@
 module(name = "com_github_buildbarn_bb_storage")
 
-bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
-bazel_dep(name = "aspect_rules_js", version = "2.1.2")
+bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")
+bazel_dep(name = "aspect_rules_js", version = "2.1.3")
 bazel_dep(name = "bazel_remote_apis", version = "0")
-bazel_dep(name = "gazelle", version = "0.40.0")
+bazel_dep(name = "gazelle", version = "0.42.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
 bazel_dep(name = "jsonnet_go", version = "0.20.0")
-bazel_dep(name = "opentelemetry-proto", version = "1.4.0")
-bazel_dep(name = "protobuf", version = "29.1")
-bazel_dep(name = "rules_go", version = "0.50.1")
+bazel_dep(name = "opentelemetry-proto", version = "1.5.0")
+bazel_dep(name = "protobuf", version = "29.3")
+bazel_dep(name = "rules_go", version = "0.53.0")
 bazel_dep(name = "rules_jsonnet", version = "0.6.0")
-bazel_dep(name = "rules_oci", version = "2.0.1")
+bazel_dep(name = "rules_oci", version = "2.2.2")
 bazel_dep(name = "rules_pkg", version = "1.0.1")
-bazel_dep(name = "rules_proto", version = "7.0.2")
-bazel_dep(name = "toolchains_llvm", version = "1.2.0")
+bazel_dep(name = "rules_proto", version = "7.1.0")
+bazel_dep(name = "toolchains_llvm", version = "1.3.0")
 
 git_override(
     module_name = "bazel_remote_apis",
-    commit = "253013303c9e1d52ebdeb5a3f0f869919e882f20",
+    commit = "7f922028fcfac63bdd8431e68de152d9e7a9e2a0",
     remote = "https://github.com/bazelbuild/remote-apis.git",
 )
 
@@ -26,8 +26,13 @@ single_version_override(
     patches = ["//:patches/gazelle/dont-flatten-srcs.diff"],
 )
 
+single_version_override(
+    module_name = "jsonnet",
+    patches = ["//:patches/jsonnet/bazel-8.diff"],
+)
+
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
-go_sdk.download(version = "1.23.3")
+go_sdk.download(version = "1.24.0")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
@@ -104,7 +109,10 @@ go_deps_dev.module_override(
     path = "golang.org/x/sys",
 )
 go_deps_dev.module_override(
-    patches = ["//:patches/org_uber_go_mock/mocks-for-funcs.diff"],
+    patches = [
+        "//:patches/org_uber_go_mock/generics.diff",
+        "//:patches/org_uber_go_mock/mocks-for-funcs.diff",
+    ],
     path = "go.uber.org/mock",
 )
 
