Don't build //... for Windows
This no longer works, because it depends on a C++ toolchain.

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -333,7 +333,7 @@
             },
             {
                "name": "windows_amd64: build and test",
-               "run": "bazel build --platforms=@rules_go//go/toolchain:windows_amd64 //..."
+               "run": "bazel build --platforms=@rules_go//go/toolchain:windows_amd64 //cmd/bb_copy //cmd/bb_replicator //cmd/bb_storage"
             },
             {
                "name": "windows_amd64: copy bb_copy",
